--- a/index.html
+++ b/index.html
@@ -10,52 +10,115 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,400;6..12,500;6..12,600;6..12,700;6..12,800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="header-1">
-        <div class="header-1__container">
-            <div class="header-1__contacts">
-                <a href="mailto:mein@miner.com">
-                    <img src="/img/email.svg" alt="email:">
-                    <h3>mein@miner.com</h3>
-                </a>
-                <a href="tel:+79999999999">
-                    <img src="/img/phone.svg" alt="phone:">
-                    <h3>+7 (999) 999-99-99</h3>
-                </a>
-            </div>
-            <div class="header-1__media">
-                <a href="#">
-                    <img src="/img/telegram.svg" alt="telegram">
-                </a>
-                <a href="#">
-                    <img src="/img/whatsapp.svg" alt="whatsapp">
-                </a>
+    <header class="header">
+        <div class="header__block-1">
+            <div class="header__container">
+                <div class="header__contacts">
+                    <a href="mailto:mein@miner.com">
+                        <img src="/img/email.svg" alt="email:">
+                        <h3>mein@miner.com</h3>
+                    </a>
+                    <a href="tel:+79999999999">
+                        <img src="/img/phone.svg" alt="phone:">
+                        <h3>+7 (999) 999-99-99</h3>
+                    </a>
+                </div>
+                <div class="header__media">
+                    <a href="#">
+                        <img src="/img/telegram.svg" alt="telegram">
+                    </a>
+                    <a href="#">
+                        <img src="/img/whatsapp.svg" alt="whatsapp">
+                    </a>
+                </div>
             </div>
         </div>
-    </header>
-    <header class="header-2">
-        <div class="header-2__container">
-            <h2 class="header-2__logo">MEIN MINER</h2>
-            <div class="header-2__menu-1">
-                <div class="header-2__menu-1__catalog">
-                    <h3>Каталог товаров</h3>
-                    <img src="/img/triangle.svg" alt="▽">
+        <div class="header__block-2">
+            <div class="header__container">
+                <h2 class="header__logo">MEIN MINER</h2>
+                <div class="header__navigation">
+                    <div class="header__catalog">
+                        <h3>Каталог товаров</h3>
+                        <img src="/img/triangle.svg" alt="▽">
+                    </div>
+                    <a href="#">Цены</a>
+                    <a href="#">Калькулятор</a>
+                    <a href="#">Доставка</a>
+                    <a href="#">Отзывы</a>
                 </div>
-                <h3>Цены</h3>
-                <h3>Калькулятор</h3>
-                <h3>Доставка</h3>
-                <h3>Отзывы</h3>
+                <button class="button-gradient">Заказать звонок</button>
+                <div class="header__menu">
+                    <button><img src="/img/search.svg" alt="search"></button>
+                    <button>
+                        <img src="/img/heart.svg" alt="favourite">
+                        <h4>6</h4>
+                    </button>
+                    <button>
+                        <img src="/img/cart.svg" alt="cart">
+                        <h4>3</h4>
+                    </button>
+                </div>
             </div>
-            <button class="button-gradient">Заказать звонок</button>
-            <div class="header-2__menu-2">
-                <button><img src="/img/search.svg" alt="search"></button>
-                <button class="header-2__menu-2__favourite">
-                    <img src="/img/heart.svg" alt="favourite">
-                    <h4>6</h4>
-                </button>
-                <button class="header-2__menu-2__cart">
-                    <img src="/img/cart.svg" alt="cart">
-                    <h4>3</h4>
-                </button>
+        </div>
+        <div class="mobile-header">
+            <div class="mobile-header__container">
+                <h2 class="mobile-header__logo">MEIN MINER</h2>
+                <div class="mobile-header__top-navigation">
+                    <a href="#">Цены</a>
+                    <a href="#">Калькулятор</a>
+                    <a href="#">Доставка</a>
+                    <a href="#">Отзывы</a>
+                </div>
+                <div class="mobile-header__menu">
+                    <button>
+                        <img src="/img/heart.svg" alt="favourite">
+                        <h4>6</h4>
+                    </button>
+                    <button>
+                        <img src="/img/cart.svg" alt="cart">
+                        <h4>3</h4>
+                    </button>
+                    <button id="menu-hamburger"><img src="/img/menu-hamburger.svg" alt="search"></button>
+                </div>
+            </div>
+            <div class="mobile-header__full-menu">
+                <div class="mobile-header__search-input">
+                    <input placeholder="Поиск" type="text" name="search" id="search">
+                    <button>
+                        <img src="/img/search.svg" alt="search">
+                    </button>
+                </div>
+                <div class="mobile-header__navigation">
+                    <div class="mobile-header__catalog">
+                        <h3>Каталог товаров</h3>
+                        <img src="/img/triangle1.svg" alt="▽">
+                    </div>
+                    <a href="#">Цены</a>
+                    <a href="#">Калькулятор</a>
+                    <a href="#">Доставка</a>
+                    <a href="#">Отзывы</a>
+                </div>
+                <div class="mobile-header__contacts">
+                    <a href="mailto:mein@miner.com">
+                        <img src="/img/email1.svg" alt="email:">
+                        <h3>mein@miner.com</h3>
+                    </a>
+                    <a href="tel:+79999999999">
+                        <img src="/img/phone1.svg" alt="phone:">
+                        <h3>+7 (999) 999-99-99</h3>
+                    </a>
+                </div>
+                <div class="mobile-header__call">
+                    <button class="button-gradient">Заказать звонок</button>
+                    <div class="mobile-header__media">
+                        <a href="#">
+                            <img src="/img/telegram.png" alt="telegram">
+                        </a>
+                        <a href="#">
+                            <img src="/img/whatsapp.png" alt="whatsapp">
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </header>
@@ -66,8 +129,33 @@
     </main>
     <footer class="footer">
         <div class="footer__container">
-
+            <h2 class="footer__logo">MEIN MINER</h2>
+            <h2 class="footer__list-title">Покупателям</h2>
+            <h2 class="footer__list-title">каталог товаров</h2>
+            <button class="white-button">Заказать звонок</button>
+            <h3>© Mein Miner, 2022</h3>
+            <div class="footer__list-block">
+                <a href="#">О компании</a>
+                <a href="#">Цены</a>
+                <a href="#">Калькулятор</a>
+                <a href="#">Доставка</a>
+                <a href="#">Отзывы</a>
+                <a href="#">Контакты</a>
+            </div>
+            <div class="footer__list-block">
+                <a href="#">Asic miners</a>
+                <a href="#">GPU фермы</a>
+                <a href="#">Видеокарты</a>
+                <a href="#">Аксессуары</a>
+                <a href="#">Компьютерные комплектующие</a>
+                <a href="#">Комплектующие для майнинга</a>
+            </div>
+            <div class="footer__links-block">
+                <a href="#">Публичная оферта</a>
+                <a href="#">Политика конфиденциальности</a>
+            </div>
         </div>
     </footer>
+    <script src="/scripts/index.js"></script>
 </body>
 </html>
