--- a/index.html
+++ b/index.html
@@ -124,7 +124,85 @@
     </header>
     <main class="main">
         <div class="main__container">
-            
+            <div class="banner">
+                <div class="banner__guarantee">
+                    <img src="/img/AntminerL7_banner.png" alt="Antminer L7">
+                    <h1>оборудование для майнинга оптом</h1>
+                    <h3>с гарантией 12 месяцев</h3>
+                    <button class="white-button">Перейти в каталог</button>
+                    <div class="pagination">
+                        <span class="banner__select"></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                </div>
+                <div class="banner__discount">
+                    <img src="/img/bitcoin.svg" alt="bitcoin" class="banner__bitcoin">
+                    <h2>выгодное предложение</h2>
+                    <div class="banner__sub-title">
+                        <h1>-20%</h1>
+                        <h3>на все товары Antminer</h3>
+                    </div>
+                    <button class="to-catalog-white">
+                        В каталог
+                        <img src="/img/Arrow-white.svg" alt="Arrow-white">
+                    </button>
+                </div>
+            </div>
+            <div class="categories">
+                <h1>категории товаров</h1>
+                <div class="categories__broduct-list">
+                    <div class="categories__product">
+                        <img class="categories__product-img" src="/img/Asic_miners.png" alt="Asic">
+                        <h2>Asic miners оптом</h2>
+                        <button class="to-catalog-black">
+                            В каталог
+                            <img src="/img/Arrow-black.svg" alt="Arrow-black">
+                        </button>
+                    </div>
+                    <div class="categories__product">
+                        <img class="categories__product-img" src="/img/gpu_farms.png" alt="gpu_farms">
+                        <h2>GPU фермы оптом</h2>
+                        <button class="to-catalog-black">
+                            В каталог
+                            <img src="/img/Arrow-black.svg" alt="Arrow-black">
+                        </button>
+                    </div>
+                    <div class="categories__product">
+                        <img class="categories__product-img" src="/img/gpu.png" alt="gpu">
+                        <h2>Видеокарты оптом</h2>
+                        <button class="to-catalog-black">
+                            В каталог
+                            <img src="/img/Arrow-black.svg" alt="Arrow-black">
+                        </button>
+                    </div>
+                    <div class="categories__product">
+                        <img class="categories__product-img" src="/img/flash_cart.png" alt="flash_cart">
+                        <h2>Аксессуары оптом</h2>
+                        <button class="to-catalog-black">
+                            В каталог
+                            <img src="/img/Arrow-black.svg" alt="Arrow-black">
+                        </button>
+                    </div>
+                    <div class="categories__product">
+                        <img class="categories__product-img" src="/img/PC.png" alt="PC">
+                        <h2>Компьютерные комплектующие оптом</h2>
+                        <button class="to-catalog-black">
+                            В каталог
+                            <img src="/img/Arrow-black.svg" alt="Arrow-black">
+                        </button>
+                    </div>
+                    <div class="categories__product">
+                        <img class="categories__product-img" src="/img/mining_components.png" alt="mining_components">
+                        <h2>Комплектующие для майнинга оптом</h2>
+                        <button class="to-catalog-black">
+                            В каталог
+                            <img src="/img/Arrow-black.svg" alt="Arrow-black">
+                        </button>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
     <footer class="footer">
