first commit of Sprint1

--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
                     <button><img src="/img/search.svg" alt="search"></button>
                     <button>
                         <img src="/img/heart.svg" alt="favourite">
-                        <h4>6</h4>
+                        <span>6</span>
                     </button>
                     <button>
                         <img src="/img/cart.svg" alt="cart">
-                        <h4>3</h4>
+                        <span>3</span>
                     </button>
                 </div>
             </div>
@@ -72,17 +72,18 @@
                 <div class="mobile-header__menu">
                     <button>
                         <img src="/img/heart.svg" alt="favourite">
-                        <h4>6</h4>
+                        <span>6</span>
                     </button>
                     <button>
                         <img src="/img/cart.svg" alt="cart">
-                        <h4>3</h4>
+                        <span>3</span>
                     </button>
                     <button id="menu-hamburger"><img src="/img/menu-hamburger.svg" alt="search"></button>
                 </div>
             </div>
             <div class="mobile-header__full-menu">
                 <div class="mobile-header__search-input">
+                    <!--suppress HtmlFormInputWithoutLabel -->
                     <input placeholder="Поиск" type="text" name="search" id="search">
                     <button>
                         <img src="/img/search.svg" alt="search">
@@ -152,7 +153,7 @@
             </div>
             <div class="categories">
                 <h1>категории товаров</h1>
-                <div class="categories__broduct-list">
+                <div class="categories__product-list">
                     <div class="categories__product">
                         <img class="categories__product-img" src="/img/Asic_miners.png" alt="Asic">
                         <h2>Asic miners оптом</h2>
