--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </div>
             </div>
             <div class="mobile-header__full-menu">
-                <div class="mobile-header__search-input">
+                <div class="mobile-header__search">
                     <!--suppress HtmlFormInputWithoutLabel -->
                     <input placeholder="Поиск" type="text" name="search" id="search">
                     <button>
@@ -202,6 +202,119 @@
                             <img src="/img/Arrow-black.svg" alt="Arrow-black">
                         </button>
                     </div>
+                </div>
+            </div>
+            <div class="advantages">
+                <img class="advantages__img" src="/img/gpu.svg" alt="gpu">
+                <h1>наши<br>преимущества</h1>
+                <div class="advantages__block">
+                    <div class="advantages__item">
+                        <img src="/img/check.svg" alt="check">
+                        <h3>Более 5 лет<br>успешной работы</h3>
+                    </div>
+                    <div class="advantages__item">
+                        <img src="/img/check.svg" alt="check">
+                        <h3>Сотни положительных<br>отзывов</h3>
+                    </div>
+                    <div class="advantages__item">
+                        <img src="/img/check.svg" alt="check">
+                        <h3>Работаем<br>по&nbsp;всей России</h3>
+                    </div>
+                    <div class="advantages__item">
+                        <img src="/img/check.svg" alt="check">
+                        <h3>Сотрудничество<br>с&nbsp;производителем</h3>
+                    </div>
+                    <div class="advantages__item">
+                        <img src="/img/check.svg" alt="check">
+                        <h3>Гарантия<br>на&nbsp;оборудование</h3>
+                    </div>
+                    <div class="advantages__item">
+                        <img src="/img/check.svg" alt="check">
+                        <h3>Собственный<br>склад в Москве</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="hits">
+                <h1>хиты продаж</h1>
+                <div class="hits__block">
+                    <div class="hits__product">
+                        <img src="/img/AntminerL7.png" alt="Antminer L7" class="hits__product-img">
+                        <h2 class="hits__product-name">Antminer L7 8800 Mh/s</h2>
+                        <h3 class="hits__presence">В наличии</h3>
+                        <div class="hits__price-block">
+                            <h2 class="hits__price">615 000 ₽</h2>
+                            <button class="hits__cart">
+                                <img src="/img/cart.svg" alt="cart">
+                            </button>
+                        </div>
+                        <button class="button-gradient">Купить в 1 клик</button>
+                        <div class="hits__label"><span>хит</span></div>
+                        <img src="/img/heart.svg" alt="favourite" class="hits__favourite">
+                    </div>
+                    <div class="hits__product">
+                        <img src="/img/AntminerS19.png" alt="Antminer S19" class="hits__product-img">
+                        <h2 class="hits__product-name">Antminer S19j pro 110 Th/s</h2>
+                        <h3 class="hits__presence">Под заказ</h3>
+                        <div class="hits__price-block">
+                            <h2 class="hits__price">245 000 ₽</h2>
+                            <del>315 000 ₽</del>
+                            <button class="hits__cart">
+                                <img src="/img/cart.svg" alt="cart">
+                            </button>
+                        </div>
+                        <button class="button-gradient">Купить в 1 клик</button>
+                        <div class="hits__label"><span>sale</span></div>
+                        <img src="/img/heart.svg" alt="favourite" class="hits__favourite">
+                    </div>
+                    <div class="hits__product">
+                        <img src="/img/WhatsminerM3.png" alt="Whatsminer M3" class="hits__product-img">
+                        <h2 class="hits__product-name">Whatsminer M3x 12.5 Th/s</h2>
+                        <h3 class="hits__presence">В наличии</h3>
+                        <div class="hits__price-block">
+                            <h2 class="hits__price">14 000 ₽</h2>
+                            <button class="hits__cart">
+                                <img src="/img/cart.svg" alt="cart">
+                            </button>
+                        </div>
+                        <button class="button-gradient">Купить в 1 клик</button>
+                        <div class="hits__label"><span>new</span></div>
+                        <img src="/img/heart.svg" alt="favourite" class="hits__favourite">
+                    </div>
+                    <div class="hits__product">
+                        <img src="/img/AntminerZ15.png" alt="Antminer Z15" class="hits__product-img">
+                        <h2 class="hits__product-name">Antminer Z15e 200 ksol</h2>
+                        <h3 class="hits__presence">В наличии</h3>
+                        <div class="hits__price-block">
+                            <h2 class="hits__price">290 000 ₽</h2>
+                            <del>325 000 ₽</del>
+                            <button class="hits__cart">
+                                <img src="/img/cart.svg" alt="cart">
+                            </button>
+                        </div>
+                        <button class="button-gradient">Купить в 1 клик</button>
+                        <div class="hits__label"><span>sale</span></div>
+                        <img src="/img/heart.svg" alt="favourite" class="hits__favourite">
+                    </div>
+                    <div class="hits__product">
+                        <img src="/img/InnosiliconA11.png" alt="Innosilicon A11" class="hits__product-img">
+                        <h2 class="hits__product-name">Innosilicon A11 1500 Mh/s</h2>
+                        <h3 class="hits__presence">Под заказ</h3>
+                        <div class="hits__price-block">
+                            <h2 class="hits__price">173 000 ₽</h2>
+                            <button class="hits__cart">
+                                <img src="/img/cart.svg" alt="cart">
+                            </button>
+                        </div>
+                        <button class="button-gradient">Купить в 1 клик</button>
+                        <div class="hits__label"><span>хит</span></div>
+                        <img src="/img/heart.svg" alt="favourite" class="hits__favourite">
+                    </div>
+                </div>
+                <div class="pagination">
+                    <span class="hits__select"></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
                 </div>
             </div>
         </div>
