--- a/index.html
+++ b/index.html
@@ -328,13 +328,65 @@
                         <img src="./img/heart.svg" alt="favourite" class="hits__favourite">
                     </div>
                 </div>
-                    <button class="hits__show-more">Показать еще</button>
+                <button class="hits__show-more">Показать еще</button>
                 <div class="pagination">
                     <span class="hits__select"></span> <!-- обозначение страниц, в css понятно будет +-. возможно не самый лучший метод, но я знаю такой -->
                     <span></span>
                     <span></span>
                     <span></span>
                 </div>
+            </div>
+            <div class="about">
+                <div class="about__text">
+                    <h2>о КОМПАНИИ</h2>
+                    <p>С&nbsp;2017&nbsp;года Main-miner поставляет технику для&nbsp;майнинга на&nbsp;российский рынок оптом. За&nbsp;пять лет&nbsp;мы смогли укрепить свои позиции на&nbsp;рынке оборудования, вырастили персонал, прекрасно разбирающийся в&nbsp;каждом типе асиков и&nbsp;комплектующих.</p>
+                    <p class="about__opt-text">Если&nbsp;вы&nbsp;хотите купить асики оптом, то&nbsp;с&nbsp;нами можете быть уверены как&nbsp;в&nbsp;качестве техники, так&nbsp;и&nbsp;в&nbsp;надёжности сотрудничества. Лучше всего о&nbsp;нас&nbsp;говорит репутация!</p>
+                </div>
+                <div class="about__img">
+                    <img src="./img/laptops.png" alt="about-img">
+                </div>
+                <div class="about__points-block">
+                    <div class="about__point">
+                        <img src="./img/point1.png" alt="point-img">
+                        <p>Работаем без выходных – 7 дней в неделю</p>
+                    </div>
+                    <div class="about__point">
+                        <img src="./img/point2.png" alt="point-img">
+                        <p>Прямое сотрудничество с поставщиками</p>
+                    </div>
+                    <div class="about__point">
+                        <img src="./img/point3.png" alt="point-img">
+                        <p>Быстрая авиадоставка от&nbsp;дней</p>
+                    </div>
+                    <div class="about__point">
+                        <img src="./img/point4.png" alt="point-img">
+                        <p>Предоплата за&nbsp;предзаказ от&nbsp;30%</p>
+                    </div>
+                    <div class="about__point">
+                        <img src="./img/point5.png" alt="point-img">
+                        <p>Официальный договор, полная защита средств</p>
+                    </div>
+                    <div class="about__point">
+                        <img src="./img/point6.png" alt="point-img">
+                        <p>Видеопроверка для удаленных клиентов</p>
+                    </div>
+                </div>
+            </div>
+            <div class="help">
+                <h2>не нашли то, что&nbsp;искали?</h2>
+                <h2>свяжитесь с нами, мы вам поможем!</h2>
+                <h3>Заполните форму и мы свяжемся с Вами в ближайшее время</h3>
+                <form class="help__blank">
+                    <input class="user__contacts" type="text" placeholder="Ваше имя" name="name" id="name">
+                    <input class="user__contacts" type="tel" placeholder="Ваш телефон" name="phone" id="phone">
+                    <button class="white-button">Отправить</button>
+                    <div class="checkbox-block">
+                        <input type="checkbox" name="personal-data" id="personal-data">
+                        <label for="personal-data"><span>Согласен на обработку <a href="#">персональных данных</a></span></label>
+                    </div>
+                    <label for="name" class="help__label-for"></label>
+                    <label for="phone" class="help__label-for"></label>
+                </form>
             </div>
         </div>
     </main>
