--- a/index.html
+++ b/index.html
@@ -388,6 +388,39 @@
                     <label for="phone" class="help__label-for"></label>
                 </form>
             </div>
+            <div class="contacts">
+                <div class="contacts__text">
+                    <h2>контакты</h2>
+                    <div class="contacts__point">
+                        <img src="./img/geo.svg" alt="location">
+                        <h3>г. Москва, ул. Покровка, 47А</h3>
+                    </div>
+                    <div class="contacts__point">
+                        <img src="./img/metro.svg" alt="metro">
+                        <h3>м. Курская</h3>
+                    </div>
+                    <a href="mailto:mein@miner.com" class="contacts__point">
+                        <img src="./img/email-small.svg" alt="email">
+                        <h3>mein@miner.com</h3>
+                    </a>
+                    <a href="tel:+79999999999" class="contacts__point">
+                        <img src="./img/phone-small.svg" alt="phone">
+                        <h3>+7 (999) 999-99-99</h3>
+                    </a>
+                    <div class="contacts__point">
+                        <img src="./img/time.svg" alt="time">
+                        <h3>График работы: ежедневно&nbsp;с&nbsp;9:00&nbsp;до&nbsp;20:00</h3>
+                    </div>
+                    <div class="contacts__social">
+                        <img src="./img/telegram40.png" alt="telegram">
+                        <img src="./img/whatsapp40.png" alt="whatsapp">
+                    </div>
+                </div>
+                <div class="contacts__map-block">
+                    <img class="contacts__map" src="./img/map.png" alt="map">
+                    <img src="./img/location.png" alt="location" class="contacts__map-location">
+                </div>
+            </div>
         </div>
     </main>
     <footer class="footer">
